<resources>
    <string name="app_name">Concesionario</string>
    <string name="vamos">¡ Vamos !</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="boton_iniciar_sesi_n">Boton de iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">E-mail</string>
    <string name="contra">Contraseña</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut purus id erat scelerisque bibendum sed vel urna.</string>
    <string name="nombre_de_la_sucursal">Nombre de la sucursal</string>
    <string name="direccion">Direccion</string>
    <string name="kurumapp">Kurumapp</string>
    <string name="no_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contra">Confirmar Contraseña</string>
    <string name="historial">historial</string>
    <string name="carros">carros</string>
    <string name="sucursales">sucursales</string>
    <string name="empleados">empleados</string>
</resources>