<!-- res/layout/caja_registro.xml -->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center_horizontal"
android:layout_gravity="center_horizontal">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/Mint_cream"
        android:trackTint="@color/Delft_blue"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="28dp"
        android:fontFamily="@font/nunito"
        android:letterSpacing="0.04"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/Mint_cream"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:backgroundTint="@color/Mint_cream"
        android:ems="30"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/Mint_cream"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:backgroundTint="@color/Mint_cream"
        android:ems="30"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/Mint_cream"
        android:textSize="16sp"
        tools:ignore="TextFields,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:backgroundTint="@color/Mint_cream"
        android:ems="10"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/contra"
        android:inputType="textPassword"
        android:textColor="@color/Mint_cream"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:backgroundTint="@color/Mint_cream"
        android:ems="10"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/confirmar_contra"
        android:inputType="textPassword"
        android:textColor="@color/Mint_cream"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/register_bt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/Delft_blue"
        android:fontFamily="@font/nunito_light"
        android:textColor="@color/Mint_cream"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textAlignment="center"
        android:textColor="@color/Mint_cream"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>